maze.lessons.maze.randommouse.RandomMouseMaze.scala.error
RandomMouseMaze:7: error: not found: value entier
if (entier=0)
    ^RandomMouseMaze:11: error: not found: value entier1
if (entier1)
    ^