maze.lessons.maze.randommouse.RandomMouseMaze.scala.code
override def run() {
var nombre:Int = 0 
while(!estSurBiscuit)
{
nombre=random3() ;
if (entier=0)
{
avance();
}
if (entier1)
{
	droite();
}
else 
{
 gauche();	
}

}

}
